--- a/public_html/backend/app/.htaccess
+++ b/public_html/backend/app/.htaccess
@@ -1,6 +1,12 @@
+
+RewriteEngine On
+RewriteCond %{REQUEST_URI} !^/public/
+RewriteRule ^(.*)$ /public/$1 [L]
+
 <IfModule authz_core_module>
     Require all denied
 </IfModule>
 <IfModule !authz_core_module>
     Deny from all
 </IfModule>
+
